link updating of green grid

--- a/projects/projects.json
+++ b/projects/projects.json
@@ -14,7 +14,7 @@
     "desc": "Predicting Load on the grid using ML and exisiting data.It also show the user nearby charging stations for EV.",
     "image": "greengrid",
     "links": {
-      "view": "https://mayanksharmaa.netlify.app/",
+      "view": "https://greengridpvt.netlify.app",
       "code": "https://github.com/Mayank2808sharma/decodeiiithackthon"
     }
   },
